Implement master node in file setup

--- a/local_test_scenario/test.config
+++ b/local_test_scenario/test.config
@@ -2,28 +2,32 @@
     "cluster": {
         "nodes": [
             {
+                "is_master": false
                 "ip": "",
                 "port": "",
                 "user": "",
-                "password": ""
+                "password": "",
             },
             {
+                "is_master": false
                 "ip": "",
                 "port": "",
                 "user": "",
-                "password": ""
+                "password": "",
             },
             {
+                "is_master": false
                 "ip": "",
                 "port": "",
                 "user": "",
-                "password": ""
+                "password": "",
             },
             {
+                "is_master": false
                 "ip": "",
                 "port": "",
                 "user": "",
-                "password": ""
+                "password": "",
             }
         ],
         "schedulers": [
