Remove master node attribute for each node and trailing comma.
- The first node will be picked up as master

--- a/api/config/test.config
+++ b/api/config/test.config
@@ -2,32 +2,28 @@
     "cluster": {
         "nodes": [
             {
-                "is_master": false
                 "ip": "",
                 "port": "",
                 "user": "",
-                "password": "",
+                "password": ""
             },
             {
-                "is_master": false
                 "ip": "",
                 "port": "",
                 "user": "",
-                "password": "",
+                "password": ""
             },
             {
-                "is_master": false
                 "ip": "",
                 "port": "",
                 "user": "",
-                "password": "",
+                "password": ""
             },
             {
-                "is_master": false
                 "ip": "",
                 "port": "",
                 "user": "",
-                "password": "",
+                "password": ""
             }
         ],
         "schedulers": [
