--- a/Pipfile
+++ b/Pipfile
@@ -9,9 +9,10 @@ typer = "*"
 fastapi = "*"
 uvicorn = {extras = ["standard"], version = "*"}
 icmplib = "*"
-httpx = "*"
 
 [dev-packages]
+httpx = "*"
+pytest = "*"
 
 [requires]
 python_version = "3.10"
