Remove user and password from node config

--- a/api/config/test.config
+++ b/api/config/test.config
@@ -3,27 +3,19 @@
         "nodes": [
             {
                 "ip": "",
-                "port": "",
-                "user": "",
-                "password": ""
+                "port": ""
             },
             {
                 "ip": "",
-                "port": "",
-                "user": "",
-                "password": ""
+                "port": ""
             },
             {
                 "ip": "",
-                "port": "",
-                "user": "",
-                "password": ""
+                "port": ""
             },
             {
                 "ip": "",
-                "port": "",
-                "user": "",
-                "password": ""
+                "port": ""
             }
         ],
         "schedulers": [
