--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -17,11 +17,11 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        cd api/
         python -m pip install --upgrade pip
         pip install pipenv
         pipenv install --dev
     - name: Run tests
       run: |
-        cd api
         export PYTHONPATH=..
         pipenv run pytest
