Update pytest workflow to change directory before running tests

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -23,5 +23,6 @@ jobs:
         pipenv install --dev
     - name: Run tests
       run: |
+        cd api/
         export PYTHONPATH=..
         pipenv run pytest
