--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -15,15 +15,16 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        cd api/
+        cache: pipenv
+    - run: |
         python -m pip install --upgrade pip
         pip install pipenv
+        cd api/
         pipenv install --dev
     - name: Run tests
       run: |
         cd api/
         export PYTHONPATH=..
         export TESTING=1
-        pipenv run pytest
+        pipenv shell
+        pytest
