Create the db folder to store the db files

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -26,5 +26,4 @@ jobs:
         cd api/
         export PYTHONPATH=..
         export TESTING=1
-        pipenv shell
-        pytest
+        pipenv run pytest
