Update CI/CD workflows for pylint and pytest
- Only executing them on api dir

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,7 +1,16 @@
 name: Pytest on API
 
 on:
-    push
+  pull_request:
+    branches:
+      - main
+      - api
+      - client
+  push:
+    branches:
+      - main
+      - api
+      - client
 
 jobs:
   test:
