--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,6 +1,16 @@
 name: Pylint
 
-on: pull_request
+on:
+  pull_request:
+    branches:
+      - main
+      - api
+      - client
+  push:
+    branches:
+      - main
+      - api
+      - client
 
 jobs:
   build:
@@ -14,10 +24,13 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install pylint
-      run: |
+        cache: pipenv
+    - run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install pipenv
+        cd api/
+        pipenv install --dev
     - name: Analysing the code with pylint
       run: |
+        cd api/
         pylint $(git ls-files '*.py')
