Add flag to pylint to only show errors

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -33,4 +33,4 @@ jobs:
     - name: Analysing the code with pylint
       run: |
         cd api/
-        pylint $(git ls-files '*.py')
+        pylint $(git ls-files '*.py') --errors-only
