--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -31,4 +31,4 @@ jobs:
     - name: Analysing the code with pylint
       run: |
         cd api/
-        pylint $(git ls-files '*.py') --errors-only
+        pipenv run pylint $(git ls-files '*.py') --errors-only
