--- a/api/config/config.json
+++ b/api/config/config.json
@@ -1,1 +1,1 @@
-{"cluster": {"mode": "best_effort", "nodes": [{"ip": "", "port": ""}, {"ip": "", "port": ""}, {"ip": "", "port": ""}, {"ip": "", "port": ""}], "schedulers": [{"name": "Apache Hadoop", "host:port": "localhost:3000"}, {"name": "SGE", "host:port": "localhost:3000"}]}}
+{"cluster": {"mode": "best_effort", "nodes": [{"ip": "", "port": ""}, {"ip": "", "port": ""}, {"ip": "", "port": ""}, {"ip": "", "port": ""}], "schedulers": [{"name": "Apache Hadoop", "master": "0"}, {"name": "SGE", "master": "0"}]}}
