Configure hadoop nodemanager to accept ssh connections

--- a/local_test_scenario/hadoop/compose.yaml
+++ b/local_test_scenario/hadoop/compose.yaml
@@ -25,7 +25,10 @@ services:
     volumes:
       - ./test.sh:/opt/test.sh
   nodemanager:
-    image: apache/hadoop:3
-    command: ["yarn", "nodemanager"]
+    build:
+      context: .
+      dockerfile: Dockerfile.nodemanager
     env_file:
       - ./config
+    ports:
+      - 3001:22
