--- a/local_test_scenario/hadoop/Dockerfile.nodemanager
+++ b/local_test_scenario/hadoop/Dockerfile.nodemanager
@@ -1,16 +1,20 @@
 FROM apache/hadoop:3
 
 COPY systemctl.py /usr/bin/systemctl
-COPY id_ed25519.pub /opt/hadoop/.ssh/authorized_keys
 
 RUN sudo chmod a+x /usr/bin/systemctl \
-    && sudo yum install -y openssh-server less \
-    && sudo ssh-keygen -A \
-    && sudo sed -i 's/#PubkeyAuthentication yes/PubkeyAuthentication yes/' /etc/ssh/sshd_config \
-    && sudo sed -i 's/#PasswordAuthentication yes/PasswordAuthentication no/' /etc/ssh/sshd_config \
-    && sudo systemctl enable sshd \
-    && sudo systemctl start sshd
+&& sudo yum install -y openssh-server less \
+&& sudo useradd metascheduler \
+&& sudo mkdir /home/metascheduler/.ssh \
+&& sudo chown metascheduler:metascheduler /home/metascheduler/.ssh \
+&& sudo chmod 700 /home/metascheduler/.ssh \
+&& sudo ssh-keygen -A \
+&& sudo sed -i 's/#PubkeyAuthentication yes/PubkeyAuthentication yes/' /etc/ssh/sshd_config \
+&& sudo sed -i 's/#PasswordAuthentication yes/PasswordAuthentication no/' /etc/ssh/sshd_config
+
+COPY id_ed25519.pub /home/metascheduler/.ssh/authorized_keys
 
 EXPOSE 22
+
 
 CMD ["yarn", "nodemanager"]
