--- a/local_test_scenario/hadoop/Dockerfile.nodemanager
+++ b/local_test_scenario/hadoop/Dockerfile.nodemanager
@@ -10,10 +10,21 @@ RUN sudo chmod a+x /usr/bin/systemctl \
 && sudo chmod 700 /home/metascheduler/.ssh \
 && sudo ssh-keygen -A \
 && sudo sed -i 's/#PubkeyAuthentication yes/PubkeyAuthentication yes/' /etc/ssh/sshd_config \
-&& sudo sed -i 's/#PasswordAuthentication yes/PasswordAuthentication no/' /etc/ssh/sshd_config \
-&& sudo cp /opt/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-examples-3.3.6.jar /home/metascheduler/
+&& sudo sed -i 's/#PasswordAuthentication yes/PasswordAuthentication no/' /etc/ssh/sshd_config
 
 COPY id_ed25519.pub /home/metascheduler/.ssh/authorized_keys
+
+COPY 1000000.txt /home/metascheduler/1000000.txt
+COPY 5000000.txt /home/metascheduler/5000000.txt
+COPY 10000000.txt /home/metascheduler/10000000.txt
+COPY 15000000.txt /home/metascheduler/15000000.txt
+
+# export JAVA_HOME=/usr/lib/jvm/jre/
+# /opt/hadoop/bin/hdfs dfs -put 1000000.txt /1000000.txt
+# /opt/hadoop/bin/hdfs dfs -put 5000000.txt /5000000.txt
+# /opt/hadoop/bin/hdfs dfs -put 10000000.txt /10000000.txt
+# /opt/hadoop/bin/hdfs dfs -put 15000000.txt /15000000.txt
+# /opt/hadoop/bin/yarn jar /opt/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-examples-3.3.6.jar wordcount /15000000.txt /out
 
 EXPOSE 22
 
